logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T090000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T13:53:01.201+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [queued]>
[2025-07-24T13:53:01.208+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [queued]>
[2025-07-24T13:53:01.208+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T13:53:01.220+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 09:00:00+00:00
[2025-07-24T13:53:01.226+0000] {standard_task_runner.py:60} INFO - Started process 454 to run task
[2025-07-24T13:53:01.228+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T09:00:00+00:00', '--job-id', '366', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmplu8c0hsa']
[2025-07-24T13:53:01.231+0000] {standard_task_runner.py:88} INFO - Job 366: Subtask Load_songplays_fact_table
[2025-07-24T13:53:01.294+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:53:01.348+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T09:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T09:00:00+00:00'
[2025-07-24T13:53:01.353+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:53:01.363+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T090000, start_date=20250724T135301, end_date=20250724T135301
[2025-07-24T13:53:01.371+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 366 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 454)
[2025-07-24T13:53:01.401+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:53:01.423+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T16:05:25.212+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [queued]>
[2025-07-24T16:05:25.222+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [queued]>
[2025-07-24T16:05:25.223+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T16:05:25.234+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 09:00:00+00:00
[2025-07-24T16:05:25.242+0000] {standard_task_runner.py:60} INFO - Started process 1767 to run task
[2025-07-24T16:05:25.246+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T09:00:00+00:00', '--job-id', '1342', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmptmb4z2vs']
[2025-07-24T16:05:25.250+0000] {standard_task_runner.py:88} INFO - Job 1342: Subtask Load_songplays_fact_table
[2025-07-24T16:05:25.315+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T16:05:25.406+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T09:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T09:00:00+00:00'
[2025-07-24T16:05:25.492+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T16:05:25.502+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T090000, start_date=20250724T160525, end_date=20250724T160525
[2025-07-24T16:05:25.540+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T16:05:25.582+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:18:06.570+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [queued]>
[2025-07-24T17:18:06.579+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [queued]>
[2025-07-24T17:18:06.581+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:18:06.592+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 09:00:00+00:00
[2025-07-24T17:18:06.597+0000] {standard_task_runner.py:60} INFO - Started process 1539 to run task
[2025-07-24T17:18:06.600+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T09:00:00+00:00', '--job-id', '2100', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpejswmhjv']
[2025-07-24T17:18:06.603+0000] {standard_task_runner.py:88} INFO - Job 2100: Subtask Load_songplays_fact_table
[2025-07-24T17:18:06.676+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T09:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:18:06.743+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T09:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T09:00:00+00:00'
[2025-07-24T17:18:08.260+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:18:08.269+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T090000, start_date=20250724T171806, end_date=20250724T171808
[2025-07-24T17:18:08.329+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:18:08.359+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
